Overflow fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -510,6 +510,7 @@ input[type="range"]::-webkit-slider-thumb {
 
   #iconscreen1 {
     height: 89%;
+    overflow: auto;
   }
   .icons {
     margin-left: 2.5%;
@@ -528,6 +529,7 @@ input[type="range"]::-webkit-slider-thumb {
 
   #bottombar {
     height: 8%;
+    overflow: auto;
   }
 
   .fontbottom {
@@ -567,6 +569,7 @@ input[type="range"]::-webkit-slider-thumb {
 
   #bottombar {
     height: 20%;
+    overflow: auto;
   }
   .bottomicons {
     height: 55%;
@@ -584,9 +587,11 @@ input[type="range"]::-webkit-slider-thumb {
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
   #iconscreen1 {
     height: 80%;
+    overflow: auto;
   }
   #bottombar {
     height: 20%;
+    overflow: auto;
   }
   .bottomicons {
     height: 70%;
@@ -595,4 +600,6 @@ input[type="range"]::-webkit-slider-thumb {
   }
 }
 
-/* Add pixel 2 xl and iPhone X */
+@media screen and (device-width: 360px) and (device-height: 760px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape){
+  overflow: auto;
+}
